--- a/rpi/src/roberto_driver/package.xml
+++ b/rpi/src/roberto_driver/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package>
   <name>roberto_driver</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The roberto_driver package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="lsi@todo.todo">lsi</maintainer>
+  <maintainer email="butakus@gmail.com">Butakus</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>GPLv3</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -41,7 +41,9 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>geometry_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
