Add xbox360 teleoperation module

--- a/master/src/roberto_teleop/CMakeLists.txt
+++ b/master/src/roberto_teleop/CMakeLists.txt
@@ -4,7 +4,12 @@ project(roberto_teleop)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+	rospy
+	roscpp
+	geometry_msgs
+	sensor_msgs
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -30,4 +35,24 @@ catkin_package(
 #  LIBRARIES roberto_teleop
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
+)
+
+###########
+## Build ##
+###########
+
+## Specify additional locations of header files
+## Your package locations should be listed before other locations
+# include_directories(include)
+include_directories(
+  ${catkin_INCLUDE_DIRS}
+)
+
+
+## Declare a C++ executable
+add_executable(xbox360_teleop src/xbox360_teleop.cpp)
+
+## Specify libraries to link a library or executable target against
+target_link_libraries(xbox360_teleop
+  ${catkin_LIBRARIES}
 )
